--- a/src/components/Product/productCard.css
+++ b/src/components/Product/productCard.css
@@ -2,7 +2,8 @@
 
 .product-card-ui {
   
-  background: #ffffff;
+  /* background: #ffffff; */
+  backdrop-filter: blur(12px);
   border-radius: 22px;
   padding: 16px;
   width: 260px;
@@ -36,8 +37,16 @@
 /* INFO */
 .product-info {
   margin-top: 10px;
-  padding: 10px;
 }
+.product-title {
+  font-weight: 600;
+}
+
+.product-title span {
+  color: #64748b;
+  font-size: 13px;
+}
+
 
 .product-info h4 {
   font-size: 15px;
