--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,16 @@ body {
   margin: 0;
   padding: 0;
 }
+
+@font-face {
+  font-family: "ValentineCoolday";
+  src: url("./assets/fonts/ValentineCoolday.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "StoriesThinking";
+  src: url("./assets/fonts/StoriesThinking.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
