--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,8 +1,7 @@
+
 /* Cart Page */
 .cart-container {
   max-width: 1000px;
-  margin: 40px auto;
-  padding: 10px;
 }
 
 /* Empty Cart */
@@ -128,10 +127,12 @@
 }
 
 .back-btn {
-  /* flex: 1; */
-  padding: 14px;
+  flex: 1;
+  padding: 10px;
+  margin: 12px;
+  
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 400;
   border-radius: 12px;
   border: 1px solid #0f172a;
   background: transparent;
@@ -146,12 +147,15 @@
 }
 
 .payment-btn {
-  /* flex: 1; */
+  flex: 1;
   padding: 14px;
-  font-size: 16px;
-  font-weight: 600;
   border-radius: 12px;
   border: none;
+  margin: 12px;
+
+  font-size: 16px;
+  font-weight: 400;
+
   background: #16a34a;
   color: white;
   cursor: pointer;
@@ -165,7 +169,51 @@
 .pay-back-btn{
   display: flex;
   justify-content: space-evenly;
-  /* padding: 20px; */
+}
+
+.cart-layout {
+  display: grid;
+  grid-template-columns: 2.5fr 1.5fr;
+  gap: 30px;
+}
+
+.cart-right {
+  display: flex;
+  flex-direction: column;
+}
+
+/* ADDRESS BOX */
+.address-box {
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+}
+
+.address-box h3 {
+  margin-bottom: 12px;
+  font-size: 18px;
+}
+
+.address-box input,
+.address-box textarea {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: 1px solid #e5e7eb;
+}
+
+.address-box textarea {
+  resize: none;
+  height: 70px;
+}
+
+/* RESPONSIVE */
+@media (max-width: 900px) {
+  .cart-layout {
+    grid-template-columns: 1fr;
+  }
 }
 
 /* Responsive */
@@ -173,6 +221,8 @@
   .cart-item {
     grid-template-columns: 1fr;
     text-align: center;
+    justify-items: center;
+     grid-template-columns: 80px 2fr 1fr 0.8fr auto;
   }
 
   .quantity-controls {
@@ -185,5 +235,9 @@
 
   .cart-actions {
     flex-direction: column;
+    
+  }
+   .cart-item img {
+    margin: 0 auto;
   }
 }
