--- a/src/components/Product/products.css
+++ b/src/components/Product/products.css
@@ -1,8 +1,8 @@
 .products-container {
-  padding-top: 30px;
+  padding-top: 50px;
   padding-left: 30px;
   padding-right: 30px;
-  /* margin: 20px; */
+  margin: 20px;
 }
 
 /* GRID */
