--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,7 +1,9 @@
 
 /* Cart Page */
-.cart-container {
-  max-width: 1000px;
+.cart-container h2 {
+  /* max-width: 1200px; */
+  /* width: 100%; */
+  margin: 30px 80px 10px 80px;
 }
 
 /* Empty Cart */
@@ -18,6 +20,8 @@
   border-radius: 10px;
   padding: 16px 20px;
   margin-bottom: 18px;
+  margin-left: 80px;
+  margin-right: 80px;
   display: grid;
   grid-template-columns: 100px 2fr 1.2fr 1fr auto;
   align-items: center;
@@ -171,6 +175,7 @@
   justify-content: space-evenly;
 }
 
+/* !Address section */
 .cart-layout {
   display: grid;
   grid-template-columns: 2.5fr 1.5fr;
@@ -180,6 +185,8 @@
 .cart-right {
   display: flex;
   flex-direction: column;
+  margin-right: 100px;
+  margin-left: 100px;
 }
 
 /* ADDRESS BOX */
