--- a/src/components/Navbar/CategoryBar.css
+++ b/src/components/Navbar/CategoryBar.css
@@ -4,12 +4,14 @@
   display: flex;
   justify-content: center;   /* 👈 CENTER */
   align-items: center;
+  width: 100%;
+  /* margin-bottom: 200px; */
 
   gap: 12px;
   padding: 10px 20px;
 
-  position: relative;
-  z-index: 999;
+  position: fixed;
+  z-index: 1000;
 
   white-space: nowrap;
   scrollbar-width: none;
