--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -17,7 +17,7 @@ html {
   position: relative;
   z-index: 2001;
   height: 70px;
-  width: 99vw;
+  width: 100vw;
 
   background-color: #ffffff;
   color: rgb(16, 150, 195);
@@ -52,7 +52,7 @@ html {
   font-size: 12px;
   letter-spacing: 2px;
   text-transform: uppercase;
-  color: #94a3b8;
+  color: #6bceff;
 }
 
 .navbar-logo {
@@ -61,8 +61,26 @@ html {
   cursor: pointer;
   margin-left: 15px;
 }
+
 .profile-wrapper {
   position: relative;
+}
+.home-icon-wrapper,
+.cart-icon-wrapper {
+  position: relative;
+  cursor: pointer;
+  color: #64748b;
+  transition: color 0.2s ease, transform 0.2s ease;
+}
+
+.home-icon-wrapper:hover,
+.cart-icon-wrapper:hover {
+  color: #0f172a;
+  transform: scale(1.08);
+}
+
+.cart-icon-wrapper.active {
+  color: #99d3eb;
 }
 
 /* ICON */
