--- a/src/components/Product/productCard.css
+++ b/src/components/Product/productCard.css
@@ -3,6 +3,7 @@
 .product-card-ui {
   
   /* background: #ffffff; */
+  margin-left: 30px;
   backdrop-filter: blur(12px);
   border-radius: 22px;
   padding: 16px;
