--- a/src/components/Cart/addressBox.css
+++ b/src/components/Cart/addressBox.css
@@ -6,6 +6,7 @@
   display: block;
   align-items: center;
   padding-left: 30px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .address-box h3 {
@@ -21,6 +22,7 @@
   border-radius: 8px;
   border: 1px solid #e5e7eb;
   font-size: 14px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .address-box textarea {
