--- a/src/components/Admin/adminOrders.css
+++ b/src/components/Admin/adminOrders.css
@@ -1,5 +1,7 @@
 .admin-orders-page {
   padding: 20px;
+  width: 70vw;
+  font-family: 'Trebuchet MS', sans-serif;
 }
 
 /* MAIN TABLE */
@@ -7,7 +9,8 @@
   width: 100%;
   border-collapse: collapse;
   background: #fff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
+  /* border-radius: 20px; */
 }
 
 .admin-orders-table th,
@@ -15,6 +18,7 @@
   padding: 12px;
   border: 1px solid #ddd;
   text-align: left;
+
 }
 
 .admin-orders-table th {
