--- a/src/components/Admin/sideBar.css
+++ b/src/components/Admin/sideBar.css
@@ -1,3 +1,4 @@
+
 /* Sidebar */
 .admin-sidebar {
   width: 240px;
@@ -13,13 +14,14 @@
   border-top-right-radius: 20px;
 }
 
+
 /* Sidebar Title */
 .sidebar-title {
   font-size: 22px;
   font-weight: bold;
   margin-bottom: 30px;
   text-align: center;
-  font-family: 'Trebuchet MS', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Sidebar Menu */
@@ -27,6 +29,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .sidebar-menu li {
@@ -34,11 +37,35 @@
   margin-bottom: 12px;
   border-radius: 8px;
   cursor: pointer;
-  transition: background 0.3s, transform 0.2s;
+  transition: background 0.3s;
+  font-size: 16px;
 }
 
-/* Hover */
+/* Hover effect */
 .sidebar-menu li:hover {
   background-color: #334155;
-  transform: scale(1.05);
+  transform: scale3d(1.2);
 }
+/* Active link */
+.sidebar-menu a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.sidebar-menu a.active {
+  background-color: #6892e6;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+/* Right content cards */
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  margin-top: 20px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  font-size: 18px;
+}
+/*! sidebar end */
